Add is_driver field to user model
