# app/authentication/serializers.py
@@ -5,4 +5,4 @@ from .models import CustomUser
 class UserSerializer(serializers.ModelSerializer):
     class Meta:
         model = CustomUser
-        fields = ['id', 'login', 'email', 'first_name', 'last_name', 'date_joined', 'last_login']
+        fields = ['id', 'email', 'first_name', 'last_name', 'is_driver', 'date_joined', 'last_login']
